--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_spinkit: ^5.2.1
   google_fonts: ^5.1.0
   nice_loading_button: ^0.0.1
+  flutter_expandable_fab: ^2.3.0
+  flutter_speed_dial: ^7.0.0
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_test:
