--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,16 @@ dependencies:
   flutter_expandable_fab: ^2.3.0
   flutter_speed_dial: ^7.0.0
   shared_preferences: ^2.3.4
+  quickalert: ^1.1.0
+  lottie: ^2.6.0
+  connectivity_plus: ^6.1.1
+  flutter_launcher_icons: ^0.14.3
 #  image_picker: ^1.0.8
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
 
 dev_dependencies:
   flutter_test:
