--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,16 +37,21 @@ dependencies:
   cupertino_icons: ^1.0.8
   get: ^4.6.6
   flutter_spinkit: ^5.2.1
-  google_fonts: ^5.1.0
+  google_fonts: ^6.2.1
   nice_loading_button: ^0.0.1
   flutter_expandable_fab: ^2.3.0
   flutter_speed_dial: ^7.0.0
   shared_preferences: ^2.3.4
   quickalert: ^1.1.0
-  lottie: ^2.6.0
+  lottie: ^3.2.0
   connectivity_plus: ^6.1.1
   flutter_launcher_icons: ^0.14.3
-#  image_picker: ^1.0.8
+  local_auth: ^2.3.0
+  image_picker: ^1.1.2
+  permission_handler: ^11.0.1
+  firebase_core: ^3.8.0
+  firebase_messaging: ^15.1.5
+  flutter_local_notifications: ^18.0.1
 
 flutter_icons:
   android: true
@@ -62,7 +67,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
